lua-filter/envoy-lua-log-combined.yaml
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 127.0.0.1, port_value: 10000 }
    filter_chains:
    - filters:     
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/get" }
                route: { cluster: some_service }
                typed_per_filter_config:
                  envoy.filters.http.lua:
                    '@type': "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                    name: "inline.lua"
              - match: { prefix: "/ip" }
                route: { cluster: some_service }
                typed_per_filter_config:
                  envoy.filters.http.lua:
                    '@type': "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                    name: "file.lua"
              - match: { prefix: "/user-agent" }
                route: { cluster: some_service }
          http_filters:
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua              
              source_codes:
                file.lua:
                  filename: file.lua
                inline.lua:
                  inline_string: |
                    -- Called on the request path.
                    function envoy_on_request(request_handle)                      
                      request_handle:headers():add("inlinescript-header", "True")          
                    end
                    -- Called on the response path.
                    function envoy_on_response(response_handle)
                      response_handle:headers():add("inlinescript-header", "True")
                    end
              default_source_code:
                inline_string: |
                  -- Called on the request path.
                  function envoy_on_request(request_handle)
                    request_handle:logInfo("Logging in the request path from default lua source.")
                  end
                  -- Called on the response path.
                  function envoy_on_response(response_handle)
                    response_handle:logInfo("Logging in the response path from default lua source.")
                  end
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: some_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: some_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                protocol: TCP
                address: httpbin.org
                port_value: 80
